chore: Stream collect toList